fixed modal container alignment

--- a/bladerunner/style.css
+++ b/bladerunner/style.css
@@ -1,11 +1,11 @@
 html, body {
-  background: black;
+    background: black;
 }
 
 #pixi-canvas {
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  margin: auto;
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    margin: auto;
 }
 
 /* Modal Background */
@@ -27,9 +27,8 @@ html, body {
 .modal-content {
     background-color: #333333;
     margin: auto;
-    padding: 20px;
+    padding: 10px;
     border: 1px solid #222;
-    width: 80%;
 
     max-height: calc(100% - 100px);
     position: fixed;
@@ -43,8 +42,9 @@ html, body {
 /* The Close Button */
 .close {
     color: #aaaaaa;
+    margin-top: -10px;
     float: right;
-    font-size: 28px;
+    font-size: 42px;
     font-weight: bold;
 }
 
